--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ addons:
 
 env:
 - PROJECT_DIR=spring-batch-hello-world
+- PROJECT_DIR=spring-batch-itemreader
 - PROJECT_DIR=spring-batch-tasklet
 
 script:
