--- a/spring-batch-hello-world/pom.xml
+++ b/spring-batch-hello-world/pom.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
@@ -11,7 +10,7 @@
 
   <name>spring-batch-hello-world</name>
   <description>Spring Batch Hello World Example</description>
-  <url>https://www.codenotfound.com/spring-batch-hello-world-example.html</url>
+  <url>https://www.codenotfound.com/spring-batch-example.html</url>
 
   <parent>
     <groupId>org.springframework.boot</groupId>
