--- a/spring-batch-capitalize-names/pom.xml
+++ b/spring-batch-capitalize-names/pom.xml
@@ -11,7 +11,7 @@
 
   <name>spring-batch-capitalize-names</name>
   <description>Spring Batch Capitalize Names Example</description>
-  <url>https://www.codenotfound.com/spring-batch/</url>
+  <url>https://codenotfound.com/spring-batch-tutorials</url>
 
   <parent>
     <groupId>org.springframework.boot</groupId>
