--- a/spring-batch-tasklet/pom.xml
+++ b/spring-batch-tasklet/pom.xml
@@ -11,7 +11,7 @@
 
   <name>spring-batch-tasklet</name>
   <description>Spring Batch Tasklet Example</description>
-  <url>https://www.codenotfound.com/spring-batch-tasklet-example.html</url>
+  <url>https://codenotfound.com/spring-batch-tasklet-example.html</url>
 
   <parent>
     <groupId>org.springframework.boot</groupId>
