--- a/spring-batch-admin/spring-cloud-data-flow-server/pom.xml
+++ b/spring-batch-admin/spring-cloud-data-flow-server/pom.xml
@@ -25,7 +25,7 @@
     <java.version>1.8</java.version>
 
     <spring-cloud-dataflow.version>1.7.1.RELEASE</spring-cloud-dataflow.version>
-    <hibernate.version>5.3.7.FINAL</hibernate.version>
+    <hibernate.version>5.3.7.Final</hibernate.version>
   </properties>
 
   <dependencies>
