--- a/spring-batch-admin/spring-cloud-data-flow-server/bin/pom.xml
+++ b/spring-batch-admin/spring-cloud-data-flow-server/bin/pom.xml
@@ -5,12 +5,12 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.codenotfound</groupId>
-  <artifactId>spring-batch-task</artifactId>
+  <artifactId>spring-cloud-data-flow-server</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>jar</packaging>
 
-  <name>spring-batch-task</name>
-  <description>Spring Batch Task Example</description>
+  <name>spring-cloud-data-flow-server</name>
+  <description>Spring Cloud Data Server on Spring Boot</description>
   <url>https://codenotfound.com/spring-batch-admin-example.html</url>
 
   <parent>
@@ -22,33 +22,13 @@
 
   <properties>
     <java.version>11</java.version>
-    <spring-cloud-starter-task.version>2.1.0.RELEASE</spring-cloud-starter-task.version>
   </properties>
 
   <dependencies>
     <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-batch</artifactId>
-    </dependency>
-    <dependency>
       <groupId>org.springframework.cloud</groupId>
-      <artifactId>spring-cloud-starter-task</artifactId>
-      <version>${spring-cloud-starter-task.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>com.h2database</groupId>
-      <artifactId>h2</artifactId>
-      <scope>runtime</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-test</artifactId>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.springframework.batch</groupId>
-      <artifactId>spring-batch-test</artifactId>
-      <scope>test</scope>
+      <artifactId>spring-cloud-starter-dataflow-server</artifactId>
+      <version>2.1.0.RELEASE</version>
     </dependency>
   </dependencies>
 
